--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server -p3001 --watch db.json"
+    "server": "json-server -p3001 db.json"
   },
   "dependencies": {
     "axios": "^1.6.7",
